fixed layout issue on last item

--- a/src/components/Gallery/Gallery.module.scss
+++ b/src/components/Gallery/Gallery.module.scss
@@ -1,16 +1,1 @@
 @import "../../styles/variables";
-
-.gallery {
-  display: flex;
-  align-items: stretch;
-  flex-shrink: 0;
-  flex-direction: column;
-}
-
-.wrapper {
-  display: flex;
-  align-items: stretch;
-  flex-shrink: 0;
-  flex-direction: row;
-  margin-bottom: $base-line-height * (1 / 8);
-}
